fix add item overlapping inputs

--- a/Mekaniko-Secured/wwwroot/css/style.css
+++ b/Mekaniko-Secured/wwwroot/css/style.css
@@ -43,7 +43,7 @@
     left: 15%;
 }
 
-.form-group input {
+.login-input input {
     width: 300px;
     height: 40px
 }
@@ -105,7 +105,10 @@
 /*********************************************** */
 
 
+/************************ INVOICE AND QUOTATION MODALS *********************** */
 
+
+/*********************************************** */
 /************************ DASHBOARD *********************** */
 
 .customer-count-box,
